syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Authenticator";

package Authenticator;

message RememberPasswordRequest {
  string Question = 1;
  bytes Answer = 2;
}

message RememberPasswordReply {
  bool IsCorrect = 1;
  bytes Password = 2;
}